k8s/minikube-ingress.yaml
# see https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.info
      http:
        paths:   
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 8888
